Fix icon graph alignment in IE7. Ref #158.

--- a/app/assets/stylesheets/_high-scores.sass
+++ b/app/assets/stylesheets/_high-scores.sass
@@ -136,6 +136,7 @@ $score-metric-width: 110px
           background: image-url("scenes/modern/bars.png") repeat-x
           display: block
           margin: 0 5px 2px
+          text-align: left
           width: 100px
 
           .bar
